update exp1 added form tag

--- a/exp1.html
+++ b/exp1.html
@@ -126,6 +126,25 @@
 </div>
 
 <div class="tag-section">
+  <div class="tag-name">&lt;form&gt; (Form Tag)</div>
+  <div class="description">Defines an HTML form for user input.</div>
+  <div class="code">
+    &lt;form action="/submit" method="post"&gt;<br>
+    &nbsp;&nbsp;&lt;input type="text" name="username" placeholder="Username"&gt;<br>
+    &nbsp;&nbsp;&lt;input type="password" name="password" placeholder="Password"&gt;<br>
+    &nbsp;&nbsp;&lt;input type="submit" value="Login"&gt;<br>
+    &lt;/form&gt;
+  </div>
+  <div class="output">
+    <form action="/submit" method="post">
+      <input type="text" name="username" placeholder="Username"><br>
+      <input type="password" name="password" placeholder="Password"><br>
+      <input type="submit" value="Login">
+    </form>
+  </div>
+</div>
+
+<div class="tag-section">
   <div class="tag-name">&lt;dl&gt; (Definition List)</div>
   <div class="description">Defines a list of terms and their descriptions.</div>
   <div class="code">
