--- a/exp1.html
+++ b/exp1.html
@@ -5,64 +5,66 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Experiment 1: HTML Tags Reference</title>
   <style>
-    body {
-      font-family: "Segoe UI", sans-serif;
-      background-color: #1e1e2f;
-      color: #f3f3f3;
-      padding: 20px;
-      line-height: 1.6;
-    }
+   body {
+  font-family: "Segoe UI", sans-serif;
+  background-color: #ffffff;
+  color: #333333;
+  padding: 20px;
+  line-height: 1.6;
+}
 
-    .title{
-      text-align: center;
-      margin-bottom: 30px;
-      color: #f1e9ff;
-    }
+.title {
+  text-align: center;
+  margin-bottom: 30px;
+  color: #3c3c3c;
+}
 
-    .tag-section {
-      border-bottom: 1px solid #444;
-      padding: 20px 0;
-    }
+.tag-section {
+  border-bottom: 1px solid #dddddd;
+  padding: 20px 0;
+}
 
-    .tag-name {
-      font-size: 20px;
-      color: #8be9fd;
-      margin-bottom: 5px;
-    }
+.tag-name {
+  font-size: 20px;
+  color: #005f99;
+  margin-bottom: 5px;
+}
 
-    .description {
-      color: #cccccc;
-      margin-bottom: 10px;
-    }
+.description {
+  color: #555555;
+  margin-bottom: 10px;
+}
 
-    .code {
-      background: #2d2d3a;
-      padding: 10px;
-      border-left: 4px solid #8be9fd;
-      font-family: monospace;
-      white-space: pre-wrap;
-      margin-bottom: 10px;
-      color: #e6db74;
-    }
+.code {
+  background: #f4f4f4;
+  padding: 10px;
+  border-left: 4px solid #005f99;
+  font-family: monospace;
+  white-space: pre-wrap;
+  margin-bottom: 10px;
+  color: #2c3e50;
+}
 
-    .output {
-      background: #31314a;
-      padding: 10px;
-      border: 1px solid #555;
-      color: #fff;
-    }
+.output {
+  background: #f9f9f9;
+  padding: 10px;
+  border: 1px solid #cccccc;
+  color: #000000;
+}
 
-    .note {
-      font-style: italic;
-      color: #999;
-    }
+.note {
+  font-style: italic;
+  color: #777777;
+}
 
-    a {
-      color: #50fa7b;
-    }
-    table{
-      border-color: #f1e9ff;
-    }
+a {
+  color: #007acc;
+}
+
+table {
+  border-color: #aaaaaa;
+}
+
   </style>
 </head>
 <body>
