--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@
         <div class="experiment-item">
           <div class="experiment-title">2. Applying Style to an HTML Page Using CSS</div>
           <div class="experiment-actions">
-            <a href="exp2.html" target="_blank" class="undone">View</a>
+            <span class="status"><b>Done</b></span>
+            <a href="./bookstore/homepage.html" target="_blank">View</a>
           </div>
         </div>
         <div class="experiment-item">
@@ -233,3 +234,4 @@
 
 </body>
 </html>
+
