--- a/bookstore/homepage.html
+++ b/bookstore/homepage.html
@@ -11,7 +11,6 @@
 <body>
   <div class="main">
 
-  
     <div class="nav">
       <div class="logo">
         <img src=".\pics\Pondy_Univ_logo1.png" alt="Institution Logo">
@@ -26,11 +25,12 @@
         <a href="cart.html">Cart</a>
       </div>
     </div>
-
+  <div class="main-content">
     <div class="search">
-      <h1>Online Bookstore</h1>
-      <input type="text" placeholder="Search a book">
+        <h1>Online Bookstore</h1>
+        <input type="text" placeholder="Search a book">
     </div>
+  </div>
     
   </div>
 </body>
